# CAIR_Imaging_System

./: README.md  convert_pgm2png.bash  convert_pgm2png.py  gps_trajectory_plot.bash  gps_trajectory_plot.py  start_gps.sh
ROS/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
ROS/devel/include/phenobot_camera/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
ROS/devel/lib/mjpeg_server/: mjpeg_server
ROS/devel/lib/phenobot_camera/: main
ROS/devel/lib/pkgconfig/: mjpeg_server.pc  phenobot_camera.pc  serial_example.pc
ROS/devel/lib/serial_example/: serial_example_node
ROS/src/gps_publisher/config/: gps_config.txt
ROS/src/serial_example/src/: serial_example_node_BKP.cpp
qt_gui/gps_recorder/build-gps_recorder-Desktop-Debug/: Makefile  moc_mainwindow.cpp
qt_gui/gps_recorder/gps_recorder/: main.cpp  mainwindow.cpp
ros_temp/devel/: .catkin  .rosinstall  setup.sh
ros_temp/devel/lib/gps_publisher/: qt_gps_app
ros_temp/src/gps_recorder/: CMakeLists.txt
ros_temp/src/gps_recorder/include/gps_recorder/: gps_recorder.h
ros_temp/src/gps_recorder/launch/: gps_recorder.launch
ros_temp/src/gps_recorder/src/: gps_recorder.cpp
src/gps_publisher/: CMakeLists.txt
src/gps_publisher/config/: gps_config.txt
src/gps_publisher/launch/: gps_gui.launch  start_gps.launch
src/gps_publisher/script/: gps_node.py  gps_node_bkp.py
src/gps_publisher/src/: mainwindow.cpp
src/serial_example/src/: serial_example_node (copy).cpp  serial_example_node.cpp  serial_example_node_test.cpp
webinterface/: PhenobotWebInterface-multiCam.html  ros2d.js  roslib.js
(+48 files in other folders)
